--- a/public/static/mobile/css/home/gene_analysis.css
+++ b/public/static/mobile/css/home/gene_analysis.css
@@ -1,24 +1,38 @@
 .biaogege{
-	width: 88%;
+	width: 92%;
 	margin: 1.5rem auto 0 auto;
-	border: .01rem solid #37afe6;
+	/*border: .01rem solid #37afe6;*/
+	background: #DCECF3;
 }
 .biaogege2{
 	
-	width: 88%;
-	margin: .3rem auto;
-	border: .01rem solid #37afe6;
+	width: 92%;
+	/*margin: .3rem auto;*/
+	/*border-bottom: .01rem solid #37afe6;*/
+	margin: 0 auto;
+	
+}
+table{  
+border-collapse:collapse;  
+border-spacing:0;  
 }
 
 tr{
 	
 	height: .7rem;
-	line-height: .7rem;
-	font-size: .25rem;
+	line-height: .3rem;
+	font-size: .2rem;
 	text-align: center;
 }
 tr td{
-   width:16.6666%;
+   width:16.66666%;
+   overflow: hidden;
+   white-space: wrap;
+   text-overflow: ellipsis;
+   -webkit-line-clamp: 2;
+  line-clamp: 2;
+  
+   
 }
 .niandai{
 	line-height: .3rem;
@@ -26,7 +40,7 @@ tr td{
 .muqian{
 	
 	text-align: center;
-	width: 88%;
+	width: 92%;
 	height: .6rem;
 	line-height: .6rem;
 	margin: 0 auto;
@@ -45,10 +59,12 @@ tr td{
 }
 .wu{
 	
-	display: block;
+	display: none;
 	margin: 0 auto;
 	background:#37afe6;
 	color: white;
+	width: 92%;
+
 }
 .kong_ear{
 	position: relative;
@@ -63,11 +79,11 @@ tr td{
 }
 .wu_pipei{
 	
-	display: block;
+	display: none;
 	
 }
 .wu_pipei p{
-	width: 88%;
+	width: 92%;
 	margin: 0 auto;
 	padding-top: 1.5rem;
 	
@@ -75,10 +91,69 @@ tr td{
 .wu_pipei span{
 	
 	display: inline-block;
-	width: 88%;
+	width: 92%;
 	color:gray;
 	text-align: center;
 	padding-top: .25rem;
 	
 	
 }
+.chaodai{
+	
+	border-left:1px solid #37afe6;
+	margin: .3rem;
+	position: relative;
+	
+}
+.jiantoudd{
+	
+	position: absolute;
+	top: 50%;
+	left: 0.1rem;
+	transform: translate(0,-50%);
+	-moz-transform: translate(0,-50%);
+	-webkit-transform: translate(0,-50%);
+	-o-transform: translate(0,-50%);
+	-transform: translate(0,-50%);
+	
+	
+}
+.jiantou_hou{
+	
+	position: absolute;
+	top: 50%;
+	left: .7rem;
+	transform: translate(0,-50%);
+	-moz-transform: translate(0,-50%);
+	-webkit-transform: translate(0,-50%);
+	-o-transform: translate(0,-50%);
+	-transform: translate(0,-50%);
+	height: 1.2rem;	
+}
+.dynasty{
+	position: absolute;
+	top: 50%;
+	transform: translate(0,-50%);
+	-moz-transform: translate(0,-50%);
+	-webkit-transform: translate(0,-50%);
+	-o-transform: translate(0,-50%);
+	-transform: translate(0,-50%);
+	left: .9rem;
+	display: inline-block;
+	height: 100%; 
+	line-height: .2rem;
+	writing-mode:tb-rl;
+	
+	
+	
+}
+.font_color{
+	color: red;
+	
+}
+.biaogege2:last-child{
+	
+	margin-bottom: 1rem;
+	
+}
+
