--- a/application/index/view/gene/analysis.html
+++ b/application/index/view/gene/analysis.html
@@ -94,12 +94,12 @@
 				</div>
 			</div>
 			<!-- 底部 -->
-			<div class="footer"></div>
+			<div class="footer">
+				{include file="footer"}
+			</div>
 		</div>
 
 		<script src="__STATIC__/js/public/jquery-1.8.3.min.js"></script>
-		<script src="__STATIC__/js/public/header.js"></script>
-		<script src="__STATIC__/js/public/footer.js"></script>
 		<script>
 			
 			var tt = $(".table_ear2 table:nth-child(2) tbody tr td:nth-child(5) span span:first").html()
