--- a/application/index/view/gene/info.html
+++ b/application/index/view/gene/info.html
@@ -41,12 +41,12 @@
 				</div>
 			</div>
 			<!-- 底部 -->
-			<div class="footer"></div>
+			<div class="footer">
+				{include file="footer"}
+			</div>
 		</div>
 
 		<script src="__STATIC__/js/public/jquery-1.8.3.min.js"></script>
-		<script src="__STATIC__/js/public/header.js"></script>
-		<script src="__STATIC__/js/public/footer.js"></script>
 	</body>
 
 </html>
