--- a/application/admin/view/gene/index.html
+++ b/application/admin/view/gene/index.html
@@ -61,7 +61,7 @@
                 <tr class="text-c">
                     <td>{$vo.id}</td>
 					<td>{$vo.name}</td>
-                    <td>{$user_name[$vo.user_id]}</td>
+                    <td>{$user_name[$vo.user_id]|default='未知'}</td>
 					<td>{$vo.nation}</td>
 					<td>{$vo.region}</td>
                     <td>{$vo.desc}</td>
