--- a/application/admin/view/gene/info.html
+++ b/application/admin/view/gene/info.html
@@ -67,22 +67,22 @@
                     <tbody class="other-temp">
                         <tr class="text-c">
                             <td width="50">
-                                <input type="text" class="input-text" style="text-align: center;" name="standard[dys19]" value="{$info.dys19 ? $info.dys19*0.01 : 0}" />
+                                <input type="text" class="input-text" style="text-align: center;" name="standard[dys19]" value="{$info.dys19 ? $info.dys19 : 0}" />
                             </td>
                             <td width="50">
-                                <input type="text" class="input-text" style="text-align: center;" name="standard[dys389i]" value="{$info.dys389i ? $info.dys389i*0.01 : 0}" />
+                                <input type="text" class="input-text" style="text-align: center;" name="standard[dys389i]" value="{$info.dys389i ? $info.dys389i : 0}" />
                             </td>
                             <td width="50">
-                                <input type="text" class="input-text" style="text-align: center;" name="standard[dys389b]" value="{$info.dys389b ? $info.dys389b*0.01 : 0}" />
+                                <input type="text" class="input-text" style="text-align: center;" name="standard[dys389b]" value="{$info.dys389b ? $info.dys389b : 0}" />
                             </td>
                             <td width="50">
-                                <input type="text" class="input-text" style="text-align: center;" name="standard[dys390]" value="{$info.dys390 ? $info.dys390*0.01 : 0}" />
+                                <input type="text" class="input-text" style="text-align: center;" name="standard[dys390]" value="{$info.dys390 ? $info.dys390 : 0}" />
                             </td>
                             <td width="50">
-                                <input type="text" class="input-text" style="text-align: center;" name="standard[dys391]" value="{$info.dys391 ? $info.dys391*0.01 : 0}" />
+                                <input type="text" class="input-text" style="text-align: center;" name="standard[dys391]" value="{$info.dys391 ? $info.dys391 : 0}" />
                             </td>
                             <td width="50">
-                                <input type="text" class="input-text" style="text-align: center;" name="standard[dys392]" value="{$info.dys392 ? $info.dys392*0.01 : 0}" />
+                                <input type="text" class="input-text" style="text-align: center;" name="standard[dys392]" value="{$info.dys392 ? $info.dys392 : 0}" />
                             </td>
                         </tr>
                     </tbody>
