--- a/application/index/view/gene/analysis.html
+++ b/application/index/view/gene/analysis.html
@@ -76,7 +76,13 @@
                             <td>{$vo.id2}</td>
                             <td>{$vo.name2}</td>
                             <td>{$vo.nation2}</td>
-                            <td>{$vo.region2}</td>
+							<td>{$vo.region2}</td>
+							<td rowspan='2' class="niandai" hidden><span class="nian"><span>{$vo.cay}</span><span>年</span></span><br/><span>({$vo.generation})代</span></td>
+							<td rowspan='2' class="chaodai">
+								<img src="__STATIC__/images/home/jiantou5.png" class="jiantoudd" />
+								<img src="/public/gene/image/{$vo.line.img}" style="height:36px;" class="jiantou_hou" />
+								<span class="dynasty">{$vo.line.name}</span>
+							</td>
 						</tr>
 					</tbody>
                 </table>
