--- a/application/admin/view/gene/index.html
+++ b/application/admin/view/gene/index.html
@@ -32,10 +32,10 @@
                     <i class="Hui-iconfont">&#xe600;</i> 
                     添加基因数据
 				</a>
-				<a href="javascript:;" onclick="gene_homologous('同位点查询')" class="btn btn-primary radius">
+				<!-- <a href="javascript:;" onclick="gene_homologous('同位点查询')" class="btn btn-primary radius">
                     <i class="Hui-iconfont">&#xe709;</i> 
                     同位点查询
-                </a>
+                </a> -->
 			</span> 
             <span class="r">共有数据：<strong>{$count}</strong> 条</span> </div>
 		<table class="table table-border table-bordered table-bg">
@@ -72,10 +72,10 @@
                             style="text-decoration:none">
                             <i class="Hui-iconfont">&#xe695;</i>
 						</a>
-						<a title="我的基因同位点查询" href="javascript:;" onclick="my_gene_homologous('{$vo.id}')" class="ml-5"
+						<!-- <a title="我的基因同位点查询" href="javascript:;" onclick="my_gene_homologous('{$vo.id}')" class="ml-5"
                             style="text-decoration:none">
                             <i class="Hui-iconfont">&#xe709;</i>
-						</a>
+						</a> -->
 						<a title="删除" href="javascript:;" onclick="del_gene('{$vo.id}')" class="ml-5"
                             style="text-decoration:none">
                             <i class="Hui-iconfont">&#xe6e2;</i>
