--- a/application/index/view/gene/analysis.html
+++ b/application/index/view/gene/analysis.html
@@ -68,8 +68,10 @@
 							<td rowspan='2' class="niandai" hidden><span class="nian"><span>{$vo.cay}</span><span>年</span></span><br/><span>({$vo.generation})代</span></td>
 							<td rowspan='2' class="chaodai">
 								<img src="__STATIC__/images/home/jiantou5.png" class="jiantoudd" />
+								{if condition="$vo.line"}
 								<img src="/public/gene/image/{$vo.line.img}" class="jiantou_hou" />
 								<span class="dynasty">{$vo.line.name}</span>
+								{/if}
 							</td>
 						</tr> -->
 						<tr>
@@ -80,8 +82,10 @@
 							<td rowspan='2' class="niandai" hidden><span class="nian"><span>{$vo.cay}</span><span>年</span></span><br/><span>({$vo.generation})代</span></td>
 							<td rowspan='2' class="chaodai">
 								<img src="__STATIC__/images/home/jiantou5.png" class="jiantoudd" />
+								{if condition="$vo.line"}
 								<img src="/public/gene/image/{$vo.line.img}" style="height:36px;" class="jiantou_hou" />
 								<span class="dynasty">{$vo.line.name}</span>
+								{/if}
 							</td>
 						</tr>
 					</tbody>
