--- a/application/index/view/gene/analysis.html
+++ b/application/index/view/gene/analysis.html
@@ -26,7 +26,7 @@
 			<div class="table_ear1">
 				<table frame="void" class="biaogege">
 					<tr style="height:.4rem">
-						<td style="text-align: center;">编号</td>
+						<td style="text-align: center;">编号/查看详情</td>
 						<td>姓名</td>
 						<td>民族</td>
 						<td style="text-align: center;">地域</td>
@@ -75,7 +75,9 @@
 							</td>
 						</tr> -->
 						<tr>
-                            <td>{$vo.id2}</td>
+                            <td>
+                            	<a href="#">{$vo.id2}</a>
+                            </td>
                             <td>{$vo.name2}</td>
                             <td>{$vo.nation2}</td>
 							<td>{$vo.region2}</td>
